--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="w3-display-bottomleft w3-container">
-    <p class="w3-xlarge w3-center">Seeking entry level Software Engineering position where I can hone my programming skills and become an expert</p>
+    <p class="w3-xlarge w3-center objective">Seeking entry level Software Engineering position where I can hone my programming skills and become an expert</p>
     <br>
     <p class="w3-large">Raleigh, NC</p>
     <p>powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
