--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body,h1,h5 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
+body, html {height: 100%; }
 .bgimg {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
@@ -28,6 +28,18 @@ body, html {height: 100%}
 .block-s {
 	max-height: 100px;
 	float:left;
+}
+
+@media screen and (max-width: 768px) {
+	.objective {
+		display: none;
+	}
+}
+
+@media screen and (max-height: 768px) {
+	.objective {
+		display: none;
+	}
 }
 
 h5 {
