all image paths are fixed (including education).  added phone to contact section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
       <h1>North Carolina State University</h1>
     </div>
     <div class="w3-container">
-      <img class="w3-image w3-margin-right block-s" src="../assets/block-S.png">
+      <img class="w3-image w3-margin-right block-s" src="assets/block-S.png">
       <h5 class="w3-threequarter">B.S. Computer Science</h5>
       <p class="w3-threequarter">Graduated July 2020</p>
     </div>
@@ -83,7 +83,13 @@
       <h1>Email</h1>
     </div>
     <div class="w3-container">
-      <p>bobby.carter.09@gmail.com</p>
+      <h3>bobby.carter.09@gmail.com</h3>
+    </div>
+    <div class="w3-container w3-black">
+      <h1>Phone</h1>
+    </div>
+    <div class="w3-container">
+      <h3>(910)915-5736</h3>
     </div>
   </div>
 </div>
